--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
   {
     "id": "p0",
     "title": "My Official Portofolio Website",
-    "thumbnail": "../../public/assets/projectsImages/myoffcialPortfolio.png",
+    "thumbnail": "/assets/projectsImages/myoffcialPortfolio.png",
     "tech": ["React", "Material UI"],
     "category": [ "React + Material UI","JavaScript","HTML & CSS","formik","yup","emailjs","react bits","react toastify","react scroll"],
     "description": " This is my official portfolio website built with React and Material UI. It showcases my projects, skills, and experience in web development. ",
